# DominantColors

./: .gitignore  DominantColors.py  README.md  main.py  pyproject.toml  setup.cfg  setup.py
dominant_colors/: DominantColors.py  __init__.py
dominant_colors/utils/: __init__.py  colors.py  image.py
utils/: __init__.py  colors.py
