[metadata]
name = DominantColors
version = 0.2
author = Roshan Rane
author_email = roshan.ran3@gmail.com
description = A package to extract dominant colors from an image.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roshanrane24/DominantColors
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independant

[options]
package_dir =
    = dominant_colors
package = find:
python_requires = >=3.6

[options.packages.find]
where = dominant_colors
